# trt_layernorm_gelu

./: CMakeLists.txt  README.md  custom_symbolics.py  export_custom.py  gelu_plugin.cpp  gelu_plugin.h  kernels.cuh  layernorm_plugin.cpp  layernorm_plugin.h  pytorch_ops.py  register.cpp  test_gelu.py  test_layernorm.py  test_layernorm_channel_first.py  verfy_plugin.py
